fixed footer icons wrapping

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -586,6 +586,12 @@ section {
     width: 507px;
     text-align: right;
 
+    &__wrapper{
+      display: inline-block;
+      width:159px;
+      padding:10px 0;
+    }
+
     @media (max-width: 1060px) {
       width:300px;
     }
@@ -700,6 +706,7 @@ section {
     display:inline-block;
     vertical-align: middle;
     transition:background 300ms ease;
+
     a{
       transition:color 300ms ease;
     }
